--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "electron-quick-start",
+  "name": "gitjet",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Fast git log viewer",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/wnayes/gitjet",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "git",
+    "log"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "Will Nayes",
+  "license": "MIT",
   "devDependencies": {
     "electron": "^29.1.1",
     "esbuild": "^0.20.1"
