--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Fast git log viewer",
   "main": "./src/main/dist.js",
   "scripts": {
-    "build": "esbuild ./src/main/main.ts --bundle --sourcemap --format=cjs --packages=external --platform=node --outfile=./src/main/dist.js && esbuild ./src/renderer/log/index.tsx --bundle --sourcemap --format=esm --outfile=./src/renderer/log/dist.js",
+    "build": "npm run build-main && npm run build-preload && npm run build-renderer",
+    "build-main": "esbuild ./src/main/main.ts --bundle --sourcemap --format=cjs --packages=external --platform=node --outfile=./src/main/dist.js",
+    "build-preload": "esbuild ./src/preload/preload.ts --bundle --sourcemap --format=cjs --packages=external --platform=node --outfile=./src/preload/dist.js",
+    "build-renderer": "esbuild ./src/renderer/log/index.tsx --bundle --sourcemap --format=esm --outfile=./src/renderer/log/dist.js",
     "start": "electron ."
   },
   "repository": "https://github.com/wnayes/gitjet",
@@ -18,6 +21,7 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@types/react-window": "^1.8.8",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "electron": "^29.1.1",
     "esbuild": "^0.20.1",
     "typescript": "^5.4.2"
@@ -28,6 +32,7 @@
     "react-resizable-panels": "^2.0.13",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
+    "react-window-infinite-loader": "^1.0.9",
     "zustand": "^4.5.2"
   }
 }
