--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-resizable-panels": "^2.0.13",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
