--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "gitjet",
   "version": "1.0.0",
-  "description": "Fast git log viewer",
-  "main": "./src/main/dist.js",
+  "description": "Fast git client",
+  "main": ".vite/build/main.js",
   "scripts": {
-    "build": "npm run build-main && npm run build-preload && npm run build-renderer",
-    "build-main": "esbuild ./src/main/main.ts --bundle --sourcemap --format=cjs --packages=external --platform=node --outfile=./src/main/dist.js",
-    "build-preload": "esbuild ./src/preload/preload.ts --bundle --sourcemap --format=cjs --packages=external --platform=node --outfile=./src/preload/dist.js",
-    "build-renderer": "esbuild ./src/renderer/log/index.tsx --bundle --sourcemap --format=esm --outfile=./src/renderer/log/dist.js",
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx ."
   },
   "repository": "https://github.com/wnayes/gitjet",
   "keywords": [
@@ -18,15 +18,29 @@
   "author": "Will Nayes",
   "license": "MIT",
   "devDependencies": {
+    "@electron-forge/cli": "^7.3.1",
+    "@electron-forge/maker-squirrel": "^7.3.1",
+    "@electron-forge/maker-zip": "^7.3.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.3.1",
+    "@electron-forge/plugin-fuses": "^7.2.0",
+    "@electron-forge/plugin-vite": "^7.3.1",
+    "@electron/fuses": "^1.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@types/react-window": "^1.8.8",
     "@types/react-window-infinite-loader": "^1.0.9",
-    "electron": "^29.1.1",
+    "electron": "^29.2.0",
     "esbuild": "^0.20.1",
-    "typescript": "^5.4.2"
+    "eslint": "^8.0.1",
+    "eslint-plugin-import": "^2.25.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^5.4.2",
+    "vite": "^5.0.12"
   },
   "dependencies": {
+    "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
