--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gitjet",
   "version": "1.0.0",
-  "description": "Fast git client",
+  "description": "Fast Git GUI",
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -13,7 +13,8 @@
   "repository": "https://github.com/wnayes/gitjet",
   "keywords": [
     "git",
-    "log"
+    "log",
+    "blame"
   ],
   "author": "Will Nayes",
   "license": "MIT",
