--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "vite": "^5.0.12"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.5.0",
+    "@codemirror/language": "^6.10.1",
     "@codemirror/language-data": "^6.5.1",
+    "@codemirror/search": "^6.5.6",
     "@codemirror/state": "^6.4.1",
-    "codemirror": "^6.0.1",
+    "@codemirror/view": "^6.26.3",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
